{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 623,
  "lineage": "38be7032-adf5-3736-7d6d-23d4ed5a1d40",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:loadbalancer/app/ammar/a14fb1b16b7429df",
            "arn_suffix": "app/ammar/a14fb1b16b7429df",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ammar-711597815.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:489994096722:loadbalancer/app/ammar/a14fb1b16b7429df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ammar",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0785d44b1799769d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06898c531ac5ffca9"
              },
              {
                "subnet_id": "subnet-0af39e95265c814b2"
              },
              {
                "subnet_id": "subnet-0c968651fcf289889"
              }
            ],
            "subnets": [
              "subnet-06898c531ac5ffca9",
              "subnet-0af39e95265c814b2",
              "subnet-0c968651fcf289889"
            ],
            "tags": {
              "Name": "ammar"
            },
            "tags_all": {
              "Name": "ammar"
            },
            "vpc_id": "vpc-05076a43ce5beee88",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route.private_route",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_route_table_association.private_route_assoc",
            "module.my_vpc.aws_route_table_association.public_route_assoc",
            "module.my_vpc.aws_security_group.allow_all",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current",
            "module.rds.aws_db_instance.mydb",
            "module.rds.aws_db_subnet_group.mydb_subnet_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:listener/app/ammar/a14fb1b16b7429df/6d4e0f902c04bc6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:targetgroup/ammar/4452600e2016130b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:489994096722:listener/app/ammar/a14fb1b16b7429df/6d4e0f902c04bc6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:loadbalancer/app/ammar/a14fb1b16b7429df",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "ammar"
            },
            "tags_all": {
              "Name": "ammar"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.my_alb",
            "module.ecs.aws_lb_target_group.my_target_group",
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route.private_route",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_route_table_association.private_route_assoc",
            "module.my_vpc.aws_route_table_association.public_route_assoc",
            "module.my_vpc.aws_security_group.allow_all",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current",
            "module.rds.aws_db_instance.mydb",
            "module.rds.aws_db_subnet_group.mydb_subnet_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:targetgroup/ammar/4452600e2016130b",
            "arn_suffix": "targetgroup/ammar/4452600e2016130b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:489994096722:targetgroup/ammar/4452600e2016130b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ammar",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ammar"
            },
            "tags_all": {
              "Name": "ammar"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route.private_route",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_route_table_association.private_route_assoc",
            "module.my_vpc.aws_route_table_association.public_route_assoc",
            "module.my_vpc.aws_security_group.allow_all",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current",
            "module.rds.aws_db_instance.mydb",
            "module.rds.aws_db_subnet_group.mydb_subnet_group"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051ba054d4d3fe325",
            "association_id": "eipassoc-06f5726fea41fd97d",
            "domain": "vpc",
            "id": "eipalloc-051ba054d4d3fe325",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e7a4fdfe0607323a",
            "private_dns": "ip-10-0-1-114.us-west-2.compute.internal",
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-54-70-119-147.us-west-2.compute.amazonaws.com",
            "public_ip": "54.70.119.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:internet-gateway/igw-07aabd3cb791877d7",
            "id": "igw-07aabd3cb791877d7",
            "owner_id": "489994096722",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051ba054d4d3fe325",
            "association_id": "eipassoc-06f5726fea41fd97d",
            "connectivity_type": "public",
            "id": "nat-0f46517d1336e7e3b",
            "network_interface_id": "eni-0e7a4fdfe0607323a",
            "private_ip": "10.0.1.114",
            "public_ip": "54.70.119.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c968651fcf289889",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ac2e857ecdd817f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f46517d1336e7e3b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ac2e857ecdd817f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:route-table/rtb-01ac2e857ecdd817f",
            "id": "rtb-01ac2e857ecdd817f",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f46517d1336e7e3b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:route-table/rtb-066f38cc5042ee7d7",
            "id": "rtb-066f38cc5042ee7d7",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07aabd3cb791877d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba408e06ac74d3a8",
            "route_table_id": "rtb-01ac2e857ecdd817f",
            "subnet_id": "subnet-03bc5812abefc5114"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff72a91584856650",
            "route_table_id": "rtb-01ac2e857ecdd817f",
            "subnet_id": "subnet-0917a77c4c468f5c2"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0948ad73e9aa26a44",
            "route_table_id": "rtb-01ac2e857ecdd817f",
            "subnet_id": "subnet-0510152c6cf138d62"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e002dc963c5cb9fd",
            "route_table_id": "rtb-066f38cc5042ee7d7",
            "subnet_id": "subnet-0c968651fcf289889"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09240e8b237f6a1a7",
            "route_table_id": "rtb-066f38cc5042ee7d7",
            "subnet_id": "subnet-0af39e95265c814b2"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae33156f60ae956a",
            "route_table_id": "rtb-066f38cc5042ee7d7",
            "subnet_id": "subnet-06898c531ac5ffca9"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:security-group/sg-0785d44b1799769d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0785d44b1799769d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240103220610184300000001",
            "name_prefix": "terraform-",
            "owner_id": "489994096722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-selected-ports"
            },
            "tags_all": {
              "Name": "allow-selected-ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-03bc5812abefc5114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bc5812abefc5114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0917a77c4c468f5c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0917a77c4c468f5c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0510152c6cf138d62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0510152c6cf138d62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0c968651fcf289889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c968651fcf289889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0af39e95265c814b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af39e95265c814b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-06898c531ac5ffca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06898c531ac5ffca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-05076a43ce5beee88"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:vpc/vpc-05076a43ce5beee88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c56ec61e59af4949",
            "default_route_table_id": "rtb-04092cfadc3beea0d",
            "default_security_group_id": "sg-03004afef25c67315",
            "dhcp_options_id": "dopt-cc0f22b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05076a43ce5beee88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04092cfadc3beea0d",
            "owner_id": "489994096722",
            "tags": {
              "Name": "ammar-vpc"
            },
            "tags_all": {
              "Name": "ammar-vpc"
            }
          }
        }
      ]
    }
  ]
}